crates/redoubt-vault/derive/src/tests/snapshots/redoubt_vault_derive__tests__expand__snapshot_named_struct_with_codec_default_field.snap
---
source: crates/redoubt-vault/derive/src/tests/expand.rs
expression: pretty(token_stream)
---
#[derive(RedoubtZero, RedoubtCodec)]
struct Delta {
    pub alpha: Vec<u8>,
    pub beta: [u8; 32],
    #[codec(default)]
    pub gamma: [u8; 16],
    #[cfg(test)]
    #[codec(default)]
    __sentinel: redoubt_zero::ZeroizeOnDropSentinel,
}
use redoubt_vault_core::CipherBoxDyns as _;
impl redoubt_vault_core::CipherBoxDyns<2> for Delta {
    fn to_encryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Encryptable; 2] {
        [&mut self.alpha, &mut self.beta]
    }
    fn to_decryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Decryptable; 2] {
        [&mut self.alpha, &mut self.beta]
    }
}
impl redoubt_vault_core::EncryptStruct<2> for Delta {
    fn encrypt_into(
        &mut self,
        aead: &mut redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &mut redoubt_vault_core::Nonces<2>,
        tags: &mut redoubt_vault_core::Tags<2>,
    ) -> Result<redoubt_vault_core::Ciphertexts<2>, redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::encrypt_into(
            self.to_encryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
        )
    }
}
impl redoubt_vault_core::DecryptStruct<2> for Delta {
    fn decrypt_from(
        &mut self,
        aead: &redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &redoubt_vault_core::Nonces<2>,
        tags: &redoubt_vault_core::Tags<2>,
        ciphertexts: &mut redoubt_vault_core::Ciphertexts<2>,
    ) -> Result<(), redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::decrypt_from(
            &mut self.to_decryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
            ciphertexts,
        )
    }
}
#[cfg(test)]
#[derive(Debug, Clone, Copy)]
pub enum DeltaBoxFailureMode {
    None,
    FailOnNthOperation(usize),
}
#[derive(redoubt_zero::RedoubtZero)]
pub struct DeltaBox {
    inner: redoubt_vault_core::CipherBox<Delta, 2>,
    /// Atomic so that the check below can sit in a method taking
    /// `&self`, which is what a read is.
    #[cfg(test)]
    failure_counter: core::sync::atomic::AtomicUsize,
}
impl DeltaBox {
    #[inline(always)]
    pub fn new() -> Self {
        Self {
            inner: redoubt_vault_core::CipherBox::new(redoubt_aead::Aead::default()),
            #[cfg(test)]
            failure_counter: core::sync::atomic::AtomicUsize::new(0),
        }
    }
    #[inline(always)]
    pub fn open<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&Delta) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open(f)
    }
    #[inline(always)]
    pub fn open_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut Delta) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_mut(f)
    }
    #[cfg(test)]
    pub fn set_failure_mode(&self, mode: DeltaBoxFailureMode) {
        use core::sync::atomic::Ordering;
        match mode {
            DeltaBoxFailureMode::None => {
                self.failure_counter.store(0, Ordering::Relaxed);
            }
            DeltaBoxFailureMode::FailOnNthOperation(n) => {
                self.failure_counter.store(n, Ordering::Relaxed);
            }
        }
    }
    #[inline(always)]
    pub fn leak_alpha(
        &self,
    ) -> Result<
        redoubt_zero::ZeroizingGuard<Vec<u8>>,
        redoubt_vault_core::CipherBoxError,
    > {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<Vec<u8>, 0, redoubt_vault_core::CipherBoxError>()
    }
    #[inline(always)]
    pub fn leak_beta(
        &self,
    ) -> Result<
        redoubt_zero::ZeroizingGuard<[u8; 32]>,
        redoubt_vault_core::CipherBoxError,
    > {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<[u8; 32], 1, redoubt_vault_core::CipherBoxError>()
    }
    #[inline(always)]
    pub fn open_alpha<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&Vec<u8>) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<Vec<u8>, 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_beta<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&[u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<[u8; 32], 1, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_alpha_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut Vec<u8>) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner
            .open_field_mut::<Vec<u8>, 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_beta_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut [u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner
            .open_field_mut::<[u8; 32], 1, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
}
impl Default for DeltaBox {
    fn default() -> Self {
        Self::new()
    }
}
