crates/redoubt-vault/derive/src/tests/snapshots/redoubt_vault_derive__tests__expand__snapshot_named_struct_with_custom_error.snap
---
source: crates/redoubt-vault/derive/src/tests/expand.rs
expression: pretty(token_stream)
---
#[derive(RedoubtZero, RedoubtCodec)]
struct WithCustomError {
    pub field1: Vec<u8>,
    pub field2: u64,
    #[cfg(test)]
    #[codec(default)]
    __sentinel: redoubt_zero::ZeroizeOnDropSentinel,
}
use redoubt_vault_core::CipherBoxDyns as _;
impl redoubt_vault_core::CipherBoxDyns<2> for WithCustomError {
    fn to_encryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Encryptable; 2] {
        [&mut self.field1, &mut self.field2]
    }
    fn to_decryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Decryptable; 2] {
        [&mut self.field1, &mut self.field2]
    }
}
impl redoubt_vault_core::EncryptStruct<2> for WithCustomError {
    fn encrypt_into(
        &mut self,
        aead: &mut redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &mut redoubt_vault_core::Nonces<2>,
        tags: &mut redoubt_vault_core::Tags<2>,
    ) -> Result<redoubt_vault_core::Ciphertexts<2>, redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::encrypt_into(
            self.to_encryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
        )
    }
}
impl redoubt_vault_core::DecryptStruct<2> for WithCustomError {
    fn decrypt_from(
        &mut self,
        aead: &redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &redoubt_vault_core::Nonces<2>,
        tags: &redoubt_vault_core::Tags<2>,
        ciphertexts: &mut redoubt_vault_core::Ciphertexts<2>,
    ) -> Result<(), redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::decrypt_from(
            &mut self.to_decryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
            ciphertexts,
        )
    }
}
#[cfg(test)]
#[derive(Debug, Clone, Copy)]
pub enum WithCustomErrorBoxFailureMode {
    None,
    FailOnNthOperation(usize),
}
#[derive(redoubt_zero::RedoubtZero)]
pub struct WithCustomErrorBox {
    inner: redoubt_vault_core::CipherBox<WithCustomError, 2>,
    /// Atomic so that the check below can sit in a method taking
    /// `&self`, which is what a read is.
    #[cfg(test)]
    failure_counter: core::sync::atomic::AtomicUsize,
}
impl WithCustomErrorBox {
    #[inline(always)]
    pub fn new() -> Self {
        Self {
            inner: redoubt_vault_core::CipherBox::new(redoubt_aead::Aead::default()),
            #[cfg(test)]
            failure_counter: core::sync::atomic::AtomicUsize::new(0),
        }
    }
    #[inline(always)]
    pub fn open<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, MyCustomError>
    where
        F: FnMut(&WithCustomError) -> Result<R, MyCustomError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open(f)
    }
    #[inline(always)]
    pub fn open_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, MyCustomError>
    where
        F: FnMut(&mut WithCustomError) -> Result<R, MyCustomError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_mut(f)
    }
    #[cfg(test)]
    pub fn set_failure_mode(&self, mode: WithCustomErrorBoxFailureMode) {
        use core::sync::atomic::Ordering;
        match mode {
            WithCustomErrorBoxFailureMode::None => {
                self.failure_counter.store(0, Ordering::Relaxed);
            }
            WithCustomErrorBoxFailureMode::FailOnNthOperation(n) => {
                self.failure_counter.store(n, Ordering::Relaxed);
            }
        }
    }
    #[inline(always)]
    pub fn leak_field1(
        &self,
    ) -> Result<redoubt_zero::ZeroizingGuard<Vec<u8>>, MyCustomError> {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<Vec<u8>, 0, MyCustomError>()
    }
    #[inline(always)]
    pub fn leak_field2(
        &self,
    ) -> Result<redoubt_zero::ZeroizingGuard<u64>, MyCustomError> {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<u64, 1, MyCustomError>()
    }
    #[inline(always)]
    pub fn open_field1<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, MyCustomError>
    where
        F: FnMut(&Vec<u8>) -> Result<R, MyCustomError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<Vec<u8>, 0, F, R, MyCustomError>(f)
    }
    #[inline(always)]
    pub fn open_field2<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, MyCustomError>
    where
        F: FnMut(&u64) -> Result<R, MyCustomError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<u64, 1, F, R, MyCustomError>(f)
    }
    #[inline(always)]
    pub fn open_field1_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, MyCustomError>
    where
        F: FnMut(&mut Vec<u8>) -> Result<R, MyCustomError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field_mut::<Vec<u8>, 0, F, R, MyCustomError>(f)
    }
    #[inline(always)]
    pub fn open_field2_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, MyCustomError>
    where
        F: FnMut(&mut u64) -> Result<R, MyCustomError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field_mut::<u64, 1, F, R, MyCustomError>(f)
    }
}
impl Default for WithCustomErrorBox {
    fn default() -> Self {
        Self::new()
    }
}
